service/service.yaml
apiVersion: v1
kind: Service
metadata:
 name: privatecluster1
 namespace: vivekname
spec:
  selector: 
    vivekdev: deep
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
